@@ -4,7 +4,7 @@
       "papix <mail@papix.net>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Minilla/v0.5.3, CPAN::Meta::Converter version 2.131490",
+   "generated_by" : "Minilla/v0.9.0, CPAN::Meta::Converter version 2.131560",
    "license" : [
       "perl_5"
    ],
@@ -21,7 +21,8 @@
          "share",
          "eg",
          "examples",
-         "author"
+         "author",
+         "builder"
       ]
    },
    "prereqs" : {
@@ -47,7 +48,6 @@
       },
       "runtime" : {
          "requires" : {
-            "Encode" : "2.39",
             "Exporter" : "0",
             "Text::VisualWidth" : "0.02",
             "parent" : "0",
