@@ -1,6 +1,7 @@
 Revision history for Perl extension Acme::SuddenlyDeath
 
 {{$NEXT}}
+        - Delete suddely_death/suddely_death_single function. 
 
 0.07 2013-06-16T14:01:17Z
         - Fix bug in sudden-death command.
